# caniot_tools

./: .gitignore  README.md  licence.txt
Examples/: sdkconfig_s31
Examples/CAN/: CMakeLists.txt  README.md  sdkconfig_s31
Examples/CAN/components/lvgl_esp32_drivers/: lvgl_spi_conf.h
Examples/CAN/components/lvgl_esp32_drivers/lvgl_tft/: ili9488.c
Examples/CAN/components/lvgl_esp32_drivers/lvgl_touch/: tp_spi.h
Examples/CAN/main/: CMakeLists.txt  main.c
Examples/CAN/main/.caniotBoxLib/includes/: caniotBox_Pins.h  cust_mem.h  lin_if.h
Examples/CAN/main/CAN/: canApplication.c  can_lvgl_appl.c  demo_can.dbc
Examples/CAN_MQTT/: CMakeLists.txt  README.md  sdkconfig
Examples/CAN_MQTT/components/lvgl_esp32_drivers/: lvgl_helpers.c
Examples/CAN_MQTT/components/lvgl_esp32_drivers/lvgl_tft/: esp_lcd_backlight.c
Examples/CAN_MQTT/components/lvgl_esp32_drivers/lvgl_touch/: tp_spi.c
Examples/CAN_MQTT/main/: CMakeLists.txt  main.c
Examples/CAN_MQTT/main/CAN/: canApplication.c
Examples/KLINE_OBD9141/: CMakeLists.txt  README.md  sdkconfig_s1  sdkconfig_s3
Examples/KLINE_OBD9141/main/: CMakeLists.txt  OBD9141.cpp  OBD9141.h  main.c  readDTC.cpp  readDTC.h
Examples/KLINE_OBD9141/main/.caniotBoxLib/includes/: cintelhex.h
Examples/LIN/: .gitignore  CMakeLists.txt  LIN.code-workspace  README.md  partitions.csv  sdkconfig  sdkconfig_s1  sdkconfig_s31
Examples/LIN/components/lvgl_esp32_drivers/lvgl_tft/: disp_driver.c
Examples/LIN/main/: CMakeLists.txt  actions_task.c  main.c
Examples/LIN/main/.caniotBoxLib/includes/: main_if.h
Examples/LIN/main/LIN/: demo_lin.ldf  linApplication.c  lin_lvgl_appl.c
Examples/LIN_ASYNC_UDS/: CMakeLists.txt  LIN_ASYNC_UDS.code-workspace  README.md  build.txt  sdkconfig_s31
Examples/LIN_ASYNC_UDS/main/: CMakeLists.txt  actions_task.c  async_uds_diagnose.c  main.c
Examples/LIN_ASYNC_UDS/main/.caniotBoxLib/includes/: main_if.h
Examples/RAW_BYTES_PROTOCOL/: CMakeLists.txt  README.md  sdkconfig_s1  sdkconfig_s3  sdkconfig_s3.old
Examples/RAW_BYTES_PROTOCOL/components/lvgl_esp32_drivers/: .cproject  lvgl_helpers.c
Examples/RAW_BYTES_PROTOCOL/components/lvgl_esp32_drivers/lvgl_tft/: disp_spi.c  ili9341.c
Examples/RAW_BYTES_PROTOCOL/components/lvgl_esp32_drivers/lvgl_touch/: xpt2046.c
Examples/RAW_BYTES_PROTOCOL/main/: CMakeLists.txt  RawBytes_example.c  main.c
Examples/RAW_BYTES_PROTOCOL/main/.caniotBoxLib/includes/: lin_if.h  main_if.h
Examples/Template/: CMakeLists.txt  README.md  sdkconfig_s3
Examples/Template/components/lvgl_esp32_drivers/: CMakeLists.txt
Examples/Template/main/: CMakeLists.txt  main.c
Examples/UDS_FlashLoader/: CMakeLists.txt  README.md  sdkconfig_s1
Examples/UDS_FlashLoader/SD_CARD/uds_flashLoader/: S32K1_uds_flash_CAN_GreenLed.json  S32K1_uds_flash_CAN_RedLed.json  S32K1_uds_flash_CAN_WhiteLed.json  S32K1_uds_flash_CAN_blueLed.json  S32K1_uds_flash_LIN.json
Examples/UDS_FlashLoader/main/: CMakeLists.txt  actions_task.c  main.c
Examples/UDS_FlashLoader/main/.caniotBoxLib/includes/: can_if.h
Examples/UDS_FlashLoader/main/UDS_FLASH/: communication_if.c  communication_if.h  main_flash.c  uds_service_fnc.h
Examples/UDS_FlashLoader_File_Explorer/: CMakeLists.txt  README.md  sdkconfig_s3  sdkconfig_s31
Examples/UDS_FlashLoader_File_Explorer/SD_CARD/: readme.txt
Examples/UDS_FlashLoader_File_Explorer/main/: CMakeLists.txt  actions_task.c  main.c
Examples/UDS_FlashLoader_File_Explorer/main/.caniotBoxLib/includes/: main_if.h
Examples/UDS_FlashLoader_File_Explorer/main/UDS_FLASH/: communication_if.c  main_flash.c  uds_lvgl_appl.c
Examples/UDS_FlashLoader_File_Explorer/main/msc/: fat12.c  fat12.h  msc_cb.c
Examples/UDS_FlashLoader_HTTP_File_SERVER/: CMakeLists.txt  README.md  UDS_FlashLoader_HTTP_File_SERVER.code-workspace  build.txt  sdkconfig_s1  sdkconfig_s3  sdkconfig_s3.old  sdkconfig_s31  sdkconfig_s31.old
Examples/UDS_FlashLoader_HTTP_File_SERVER/SD_CARD/: readme.txt
Examples/UDS_FlashLoader_HTTP_File_SERVER/main/: CMakeLists.txt  main.c
Examples/UDS_FlashLoader_HTTP_File_SERVER/main/.caniotBoxLib/includes/: lvgl_if.h
Examples/UDS_FlashLoader_HTTP_File_SERVER/main/UDS_FLASH/: crc.c  main_flash.c
Examples/UDS_FlashLoader_HTTP_File_SERVER/main/main_fs/: file_server.c  upload_script.html
Examples/UDS_FlashLoader_MQTT_OTA/: CMakeLists.txt  README.md  build.txt  sdkconfig_s3
Examples/UDS_FlashLoader_MQTT_OTA/SD_CARD/uds_ota_flashLoader/: S32K1_uds_flash_CAN_blueLed.json
Examples/UDS_FlashLoader_MQTT_OTA/components/lvgl_esp32_drivers/lvgl_tft/: ili9488.h
Examples/UDS_FlashLoader_MQTT_OTA/main/: CMakeLists.txt  actions_task.c  lvgl_appl.c  main.c
Examples/UDS_FlashLoader_MQTT_OTA/main/.caniotBoxLib/includes/: main_if.h
Examples/UDS_FlashLoader_MQTT_OTA/main/MQTT_HIVEMQ/: mqtt_HiveMQ_if.h  mqtt_HiveMQ_publisher.c  mqtt_HiveMQ_subscriber.c
Examples/UDS_FlashLoader_MQTT_OTA/main/UDS_FLASH/: main_flash.c
Examples/UDS_FlashLoader_OTA/: .gitignore  CMakeLists.txt  README.md  UDS_FlashLoader_OTA.code-workspace  build.txt  partitions_s3.csv  sdkconfig_s3
Examples/UDS_FlashLoader_OTA/SD_CARD/: readme.txt
Examples/UDS_FlashLoader_OTA/SD_CARD/uds_ota_flashLoader/: S32K1_uds_flash_CAN_blueLed.json
Examples/UDS_FlashLoader_OTA/components/lvgl/: .cproject
Examples/UDS_FlashLoader_OTA/components/lvgl_esp32_drivers/: Kconfig  lvgl_helpers.h  lvgl_spi_conf.h
Examples/UDS_FlashLoader_OTA/main/: CMakeLists.txt  actions_task.c  main.c
Examples/UDS_FlashLoader_OTA/main/.caniotBoxLib/includes/: lin_if.h
Examples/UDS_FlashLoader_OTA/main/UDS_FLASH/: communication_if.h  main_flash.c  uds_service_fnc.c
Examples/UDS_FlashLoader_OTA/main/server_certs/: ca_cert.pem  uds_https_ota.c  uds_https_ota.h
caniotBoxLib/includes/: can_if.h
docs/: .readthedocs.yaml  Makefile  readthedocs.yaml  requirement.txt
docs/source/: .index.rst.swp  CAN.rst  Hardware.rst  conf.py  getting-started-caniot.rst  index.rst  intro.rst
